--- a/views/signup3.hbs
+++ b/views/signup3.hbs
@@ -60,27 +60,27 @@
                     <div class="row mt-2">
                         <div class="col-md-3">
                             <div class="mb-3">
-                                <input type="text" class="form-control"   placeholder="First Name" value="">
+                                <input type="text" class="form-control"   placeholder="First Name" name="fname">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="mb-3">
-                                <input type="text" class="form-control"   placeholder="Last Name">
+                                <input type="text" class="form-control"   placeholder="Last Name" name="lname">
                             </div>
                         </div>
                         <div class="col-md-1">
                             <div class="mb-3">
-                                <input type="text" class="form-control"   placeholder="SSN">
+                                <input type="text" class="form-control"   placeholder="SSN" name="ssn">
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="mb-3">
-                                <input type="text" class="form-control"   placeholder="CDL State">
+                                <input type="text" class="form-control"   placeholder="CDL State" name="cdlstate">
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="mb-3">
-                                <input type="text" class="form-control"   placeholder="DL Number">
+                                <input type="text" class="form-control"   placeholder="DL Number" name="dlnumber">
                             </div>
                         </div>
                     </div>
@@ -108,27 +108,27 @@
                 `<div class="row mt-2">
                     <div class="col-md-3">
                         <div class="mb-3">
-                            <input type="text" class="form-control"   placeholder="First Name">
+                            <input type="text" class="form-control"   placeholder="First Name" name="fname">
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="mb-3">
-                            <input type="text" class="form-control"   placeholder="Last Name">
+                            <input type="text" class="form-control"   placeholder="Last Name" name="lname">
                         </div>
                     </div>
                     <div class="col-md-1">
                         <div class="mb-3">
-                            <input type="text" class="form-control"   placeholder="SSN">
+                            <input type="text" class="form-control"   placeholder="SSN" name="ssn">
                         </div>
                     </div>
                     <div class="col-md-2">
                         <div class="mb-3">
-                            <input type="text" class="form-control"   placeholder="CDL State">
+                            <input type="text" class="form-control"   placeholder="CDL State" name="cdlstate">
                         </div>
                     </div>
                     <div class="col-md-2">
                         <div class="mb-3">
-                            <input type="text" class="form-control"   placeholder="DL Number">
+                            <input type="text" class="form-control"   placeholder="DL Number" name="dlnumber">
                         </div>
                     </div>
                     <div class="col-md-1">
