--- a/views/signup4.hbs
+++ b/views/signup4.hbs
@@ -54,35 +54,35 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label  class="form-label">First Name</label>
-                        <input type="text" class="form-control" name="fname">
+                        <input type="text" class="form-control" name="fname" required>
                     </div>
                     <div class="mb-3">
                         <label  class="form-label">Credit Card Number</label>
-                        <input type="number" class="form-control" name="ccnumber">
+                        <input type="number" class="form-control" name="ccnumber" required>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label  class="form-label">Last Name</label>
-                        <input type="text" class="form-control" name="lname">
+                        <input type="text" class="form-control" name="lname"required>
                     </div>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="mb-3">
                                 <label  class="form-label">Month</label>
-                                <input type="number" class="form-control" name="month" >
+                                <input type="number" class="form-control" name="month"  required>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="mb-3">
                                 <label  class="form-label">Year</label>
-                                <input type="number" class="form-control" name="year">
+                                <input type="number" class="form-control" name="year" required>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="mb-3">
                                 <label  class="form-label">Ccv</label>
-                                <input type="number" class="form-control" name="ccv">
+                                <input type="number" class="form-control" name="ccv" required>
                             </div>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label  class="form-label">Address 1</label>
-                        <input type="text" class="form-control" name="address1">
+                        <input type="text" class="form-control" name="address1" required>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -106,19 +106,19 @@
                 <div class="col-md-4">
                     <div class="mb-3">
                         <label  class="form-label">City</label>
-                        <input type="text" class="form-control" name="city">
+                        <input type="text" class="form-control" name="city"  required>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mb-3">
                         <label  class="form-label">State</label>
-                        <input type="text" class="form-control" name="state">
+                        <input type="text" class="form-control" name="state"  required>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mb-3">
                         <label  class="form-label">Zip Code</label>
-                        <input type="text" class="form-control" name="zipcode">
+                        <input type="text" class="form-control" name="zipcode"  required>
                     </div>
                 </div>
             </div>
