--- a/views/signup2.hbs
+++ b/views/signup2.hbs
@@ -48,26 +48,26 @@
             <p style="font-size: 30px; font-weight:500" >Choose Membership</p>
             <p>Choose your desired length of membership to the DOT Consortium.</p>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="plan" value="1">
+                <input class="form-check-input" type="radio" name="plan" value="1" required>
                 <label class="form-check-label" for="flexRadioDefault1">
                     <b>1 Year Membership - $ 99.00</b>
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="plan" value="2">
+                <input class="form-check-input" type="radio" name="plan" value="2" required>
                 <label class="form-check-label" for="flexRadioDefault2">
                     <b>3 Year Membership - $ 199.00</b>
                 </label>
             </div>
             <hr class="mt-5" >
             <p class="mt-5" style="font-size: 30px; font-weight:500" >Add Supervisor Training - $100.00 each</p>
-            <input type="text"  id="" placeholder="Quantity" name="quantity"> 
+            <input type="text"  id="" placeholder="Quantity" name="quantity" required> 
             <p class="mt-3">All supervisors are required to have supervisor training.</p>
             <hr class="mt-4">
             <p class="mt-5" style="font-size: 30px; font-weight:500" >Terms of Use</p>
             <p>In order to participate in the Express Labs DOT Consortium, you must agree to our Terms of Use.</p>
             <a href="Read the terms of Use" class=""></a>
-            <input class="mr-3" type="checkbox" name="" id="">I Agree to the Terms of Use
+            <input class="mr-3" type="checkbox" name="" id="" required>I Agree to the Terms of Use
             <div style="align-content: flex-end;">
                 <button type="submit" class="btn btn-success mt-3">Add Drivers >></button>
             </div>
