--- a/views/signup3.hbs
+++ b/views/signup3.hbs
@@ -60,34 +60,34 @@
                     <div class="row mt-2">
                         <div class="col-md-3">
                             <div class="mb-3">
-                                <input type="text" class="form-control"   placeholder="First Name" name="fname">
+                                <input type="text" class="form-control"   placeholder="First Name" name="fname" required>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="mb-3">
-                                <input type="text" class="form-control"   placeholder="Last Name" name="lname">
+                                <input type="text" class="form-control"   placeholder="Last Name" name="lname" required>
                             </div>
                         </div>
                         <div class="col-md-1">
                             <div class="mb-3">
-                                <input type="text" class="form-control"   placeholder="SSN" name="ssn">
+                                <input type="text" class="form-control"   placeholder="SSN" name="ssn" required>
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="mb-3">
-                                <input type="text" class="form-control"   placeholder="CDL State" name="cdlstate">
+                                <input type="text" class="form-control"   placeholder="CDL State" name="cdlstate" required>
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="mb-3">
-                                <input type="text" class="form-control"   placeholder="DL Number" name="dlnumber">
+                                <input type="text" class="form-control"   placeholder="DL Number" name="dlnumber" required>
                             </div>
                         </div>
                     </div>
                 </div>
                 <button type="button" class="btn btn-success mb-3" style="width: 100%;" onclick="makeNewDriver(this)" >Click Here to add More Drivers</button>
             </div>
-            <input type="checkbox" name="" id="" class="me-2" >Click Here to Confirm the Drivers Listed Above have Negative DOT Pre-Employment Drug Test Results - Then Click Finished Adding Drivers below.
+            <input type="checkbox" name="" id="" class="mr-3" required >Click Here to Confirm the Drivers Listed Above have Negative DOT Pre-Employment Drug Test Results - Then Click Finished Adding Drivers below.
             <p class="mt-3 ms-2">If you are Not Adding Drivers - Click Finished Adding Drivers Below.</p>
             <button type="submit" class="btn btn-success">Finish Adding Driver</button>
         </form>
@@ -108,27 +108,27 @@
                 `<div class="row mt-2">
                     <div class="col-md-3">
                         <div class="mb-3">
-                            <input type="text" class="form-control"   placeholder="First Name" name="fname">
+                            <input type="text" class="form-control"   placeholder="First Name" name="fname" required>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="mb-3">
-                            <input type="text" class="form-control"   placeholder="Last Name" name="lname">
+                            <input type="text" class="form-control"   placeholder="Last Name" name="lname" required>
                         </div>
                     </div>
                     <div class="col-md-1">
                         <div class="mb-3">
-                            <input type="text" class="form-control"   placeholder="SSN" name="ssn">
+                            <input type="text" class="form-control"   placeholder="SSN" name="ssn" required>
                         </div>
                     </div>
                     <div class="col-md-2">
                         <div class="mb-3">
-                            <input type="text" class="form-control"   placeholder="CDL State" name="cdlstate">
+                            <input type="text" class="form-control"   placeholder="CDL State" name="cdlstate" required>
                         </div>
                     </div>
                     <div class="col-md-2">
                         <div class="mb-3">
-                            <input type="text" class="form-control"   placeholder="DL Number" name="dlnumber">
+                            <input type="text" class="form-control"   placeholder="DL Number" name="dlnumber" required>
                         </div>
                     </div>
                     <div class="col-md-1">
